--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
   snyk:
+      needs: build
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@master
