--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,7 +35,7 @@ jobs:
       steps:
         - uses: actions/checkout@master
         - name: Run Snyk to check for vulnerabilities
-          uses: snyk/actions/node@master
+          uses: snyk/actions/maven@master
           continue-on-error: true 
           env:
             SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
